--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset=utf-8>
-  <title>my-project</title>
-  <link href=./static/css/app.dacddfb4bce12aa4e0a66f8697624a88.css rel=stylesheet>
-</head>
-<body>
-<div id=app></div>
-<script type=text/javascript src=./static/js/manifest.b708d94fa013156d3ba9.js></script>
-<script type=text/javascript src=./static/js/vendor.f816ff05d003c3d3bce0.js></script>
-<script type=text/javascript src=./static/js/app.a5935d53bce1b0b05925.js></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>my-project</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
