--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>my-project</title><link href=/static/css/app.cd3b4f1b4106623d45faf7d1209e976e.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.3c7cfbb7b9803426e2d0.js></script><script type=text/javascript src=/static/js/vendor.d5be33379d7c6710bf8c.js></script><script type=text/javascript src=/static/js/app.2eec33fbe70ae982ac47.js></script></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset=utf-8>
+    <title>my-project</title>
+    <link href=./static/css/app.cd3b4f1b4106623d45faf7d1209e976e.css rel=stylesheet>
+</head>
+<body>
+<div id=app></div>
+<script type=text/javascript src=./static/js/manifest.3c7cfbb7b9803426e2d0.js></script>
+<script type=text/javascript src=./static/js/vendor.d5be33379d7c6710bf8c.js></script>
+<script type=text/javascript src=./static/js/app.2eec33fbe70ae982ac47.js></script>
+</body>
+</html>
